<resources>
    <string name="app_name">Employee Details</string>
    <string name="emp_id">Emp Id</string>
    <string name="emp_name">Emp Name</string>
    <string name="current_salary">Current Salary</string>
    <string name="joining_date">Joining Date</string>
    <string name="location">Location</string>
    <string name="isonline">IsOnline</string>
    <string name="designation">Designation</string>
    <string name="remove_last">Remove Last</string>
    <string name="show_next">Show Next</string>
</resources>